tests/fixtures/valid/run_for.nl
fn main -> i64
    let total i64 = 0
    for i from 1 to 3
        total += i
    total
