tests/fixtures/invalid/for_range_type_mismatch.nl
fn main -> i64
    for i from false to 3
        i
    0
